--- a/portfolio_HTML.html
+++ b/portfolio_HTML.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
-    <!-- <link rel="stylesheet" href="style1.css"> -->
 </head>
 <body>
     <div class="container">
-        <a href="index_HTML.html" class="button">Home</button>
-        <a href="portfolio_HTML.html" class="button">Portfolio</a>
-        <a href="qualifications_HTML.html" class="button">Resume</a>
-        <a href="service_HTML.html" class="button">Service</a>
+        <a href="index.html" class="button">Home</button>
+        <a href="portfolio.html" class="button">Portfolio</a>
+        <a href="qualifications.html" class="button">Resume</a>
+        <a href="service.html" class="button">Service</a>
         <a href="genai.html" class="button">GPT Page</a>
         <a class="button">Change Layout</a>
     </div>
@@ -39,7 +38,7 @@
         </div>
 
         <div class="row">
-            <h2>6502 Emulator</h2>
+            <h2><a href="https://en.wikipedia.org/wiki/MOS_Technology_6502">6502 Emulator</a></h2>
             <p class="text">
                 I emulated the 6502 Emulator which used CISC aritecture. The main focus of this project was to expand my understanding of 
                 lower level programming. The emulator was written in C++, and it fully repicates the 6502 instruction sets including 
@@ -55,7 +54,7 @@
         </div>
 
         <div class="row">
-            <h2>Nand2Tetris</h2>
+            <h2><a href="https://www.nand2tetris.org/">Nand2Tetris</a></h2>
             <p class="text">
                 During the last summer, I completed the Nand2Tetris part one course. In the course, I built a 16-bit CPU from the ground up using HDL.
                 I started with the fundemental logic gates and progressed to more complex components like ALUs, registers, and program counter.
@@ -67,6 +66,21 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <a href="mailto:junyiwu2003@tamu.edu" class="footer-link">
+            <img src="pictures/gmail.png" alt="Email" class="footer-icon"> Email
+        </a>
+        <a href="https://open.spotify.com/user/31ppcyvsihp5edpzr3lbhz6igt5u?si=fc56ed82211a4e75" target="_blank" class="footer-link">
+            <img src="pictures/spotify.png" alt="Spotify" class="footer-icon"> Spotify
+        </a>
+        <a href="https://www.linkedin.com/in/junyiwuuu" target="_blank" class="footer-link">
+            <img src="pictures/linkedin.png" alt="LinkedIn" class="footer-icon"> LinkedIn
+        </a>
+        <a href="https://github.com/Taotao2003" target="_blank" class="footer-link">
+            <img src="pictures/github.png" alt="github" class="footer-icon"> Github
+        </a>
+    </footer>
 
 </body>
 </html>
