--- a/index_HTML.html
+++ b/index_HTML.html
@@ -80,6 +80,9 @@
     </div>
     
     <footer class="footer">
+        <a href="mailto:junyiwu2003@tamu.edu" class="footer-link">
+            <img src="pictures/gmail.png" alt="Email" class="footer-icon"> Email
+        </a>
         <a href="https://open.spotify.com/user/31ppcyvsihp5edpzr3lbhz6igt5u?si=fc56ed82211a4e75" target="_blank" class="footer-link">
             <img src="pictures/spotify.png" alt="Spotify" class="footer-icon"> Spotify
         </a>
@@ -87,7 +90,7 @@
             <img src="pictures/linkedin.png" alt="LinkedIn" class="footer-icon"> LinkedIn
         </a>
         <a href="https://github.com/Taotao2003" target="_blank" class="footer-link">
-            <img src="pictures/github.png" alt="Instagram" class="footer-icon"> Instagram
+            <img src="pictures/github.png" alt="github" class="footer-icon"> Github
         </a>
     </footer>
     
