--- a/qualifications_HTML.html
+++ b/qualifications_HTML.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="index_HTML.html" class="button">Home</button>
-        <a href="portfolio_HTML.html" class="button">Portfolio</a>
-        <a href="qualifications_HTML.html" class="button">Resume</a>
-        <a href="service_HTML.html" class="button">Service</a>
+        <a href="index.html" class="button">Home</button>
+        <a href="portfolio.html" class="button">Portfolio</a>
+        <a href="qualifications.html" class="button">Resume</a>
+        <a href="service.html" class="button">Service</a>
         <a href="genai.html" class="button">GPT Page</a>
         <a class="button">Change Layout</a>
     </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="skill-box">
             <h3>Technical Areas of Interest</h3>
-            <p> I am interested in topics such as <b>VLSI</b> and <b>Computer Architecture</b> because they are form the foundation of 
+            <p> I am interested in topics such as <a href="https://www.tutorialspoint.com/vlsi_design/vlsi_design_digital_system.htm"><b>VLSI</b></a> and <a href="https://www.spiceworks.com/tech/tech-general/articles/what-is-computer-architecture/"><b>Computer Architecture</b></a> because they are form the foundation of 
                 modern computing. They are key to developing the next generation of high-performance processors while enabling advancements in AI and ML. 
                 I want to contribute to this key advancement that will greatly enhance our lives through this groundbreaking technology. 
             </p>
@@ -51,14 +51,17 @@
 
 
     <footer class="footer">
-        <a href="https://open.spotify.com/" target="_blank" class="footer-link">
+        <a href="mailto:junyiwu2003@tamu.edu" class="footer-link">
+            <img src="pictures/gmail.png" alt="Email" class="footer-icon"> Email
+        </a>
+        <a href="https://open.spotify.com/user/31ppcyvsihp5edpzr3lbhz6igt5u?si=fc56ed82211a4e75" target="_blank" class="footer-link">
             <img src="pictures/spotify.png" alt="Spotify" class="footer-icon"> Spotify
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" class="footer-link">
+        <a href="https://www.linkedin.com/in/junyiwuuu" target="_blank" class="footer-link">
             <img src="pictures/linkedin.png" alt="LinkedIn" class="footer-icon"> LinkedIn
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="footer-link">
-            <img src="pictures/github.png" alt="Instagram" class="footer-icon"> Instagram
+        <a href="https://github.com/Taotao2003" target="_blank" class="footer-link">
+            <img src="pictures/github.png" alt="github" class="footer-icon"> Github
         </a>
     </footer>
 </body>
