--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="content">
         <div class="description">
-            <h1>Hello!!! Welcome to my website for CSCE-331!</h1>
+            <h1>HHHello!!! Welcome to my website for CSCE-331!</h1>
             <p><h4>
                 My name is Junyi, and I am a junior majoring in Computer Engineering 💻 
                 with a minor in Mathematics🧮! And I am studying at Texas A&M in College Station 😼
